# DocMind

./: RAGV2.ipynb  README.md  pyproject.toml  rag.ipynb  rag.py
store/679181d7-097a-4b97-8b6d-4125a459c0ed/: index_metadata.pickle
